SalesforceProject2/src/objects/GeoCodedLocation__c.object
<CustomObject>
    <description>Represents the calculated geolocation for a specified address using Google GeoCoder service.</description>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>Id of the object it references.</description>
        <label>ParentId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accuracy__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accuracy</description>
        <label>accuracy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>latitude__c</fullName>
        <description>Latitude</description>
        <label>latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>longitude__c</fullName>
        <description>Longitude</description>
        <label>longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Status
0 = not calculated
1 = found
2 = no street address
3 = not found
4 = not found without city
5,6,7,8,9 for round robin recalculation beginning at 4 ending at 0</description>
        <label>status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GeoCodedLocation</label>
    <nameField>
        <label>GeoCodedLocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GeoCodedLocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>